// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`readAllSpecs accepts --src ending with slash 1`] = `
Object {
  "oao": Object {
    "displayName": "oao",
    "name": "oao",
    "pkgPath": "test/fixtures/packages/oao",
    "specs": Object {
      "license": "MIT",
      "main": "index.js",
      "name": "oao",
      "version": "0.1.0",
    },
  },
  "oao-b": Object {
    "displayName": "oao-b",
    "name": "oao-b",
    "pkgPath": "test/fixtures/packages/oao-b",
    "specs": Object {
      "dependencies": Object {
        "oao": "*",
        "timm": "1.x",
      },
      "license": "MIT",
      "main": "index.js",
      "name": "oao-b",
      "scripts": Object {
        "start": "ls -al",
        "start2": "ls",
      },
      "version": "0.1.0",
    },
  },
  "oao-c": Object {
    "displayName": "oao-c",
    "name": "oao-c",
    "pkgPath": "test/fixtures/packages/oao-c",
    "specs": Object {
      "dependencies": Object {
        "oao": "*",
        "timm": "1.x",
      },
      "devDependencies": Object {
        "oao-b": "*",
        "xxl": "1.x",
      },
      "license": "MIT",
      "main": "index.js",
      "name": "oao-c",
      "peerDependencies": Object {
        "oao-b": "*",
      },
      "scripts": Object {
        "start": "ls -al",
      },
      "version": "0.1.0",
    },
  },
  "oao-d": Object {
    "displayName": "oao-d",
    "name": "oao-d",
    "pkgPath": "test/fixtures/packages/oao-d",
    "specs": Object {
      "dependencies": Object {
        "oao": "*",
        "timm": "1.x",
      },
      "devDependencies": Object {
        "oao-b": "*",
        "oao-c": "*",
        "xxl": "1.x",
      },
      "license": "MIT",
      "main": "index.js",
      "name": "oao-d",
      "peerDependencies": Object {},
      "scripts": Object {},
      "version": "0.1.0",
    },
  },
  "oao-priv": Object {
    "displayName": "oao-priv",
    "name": "oao-priv",
    "pkgPath": "test/fixtures/packages/oao-priv",
    "specs": Object {
      "dependencies": Object {
        "oao": "*",
        "timm": "1.x",
      },
      "devDependencies": Object {
        "oao-b": "*",
        "oao-c": "*",
        "xxl": "1.x",
      },
      "license": "MIT",
      "main": "index.js",
      "name": "oao-priv",
      "peerDependencies": Object {},
      "private": true,
      "version": "0.1.0",
    },
  },
}
`;

exports[`readAllSpecs reads all package.json files as well as metadata 1`] = `
Object {
  "oao": Object {
    "displayName": "oao",
    "name": "oao",
    "pkgPath": "test/fixtures/packages/oao",
    "specs": Object {
      "license": "MIT",
      "main": "index.js",
      "name": "oao",
      "version": "0.1.0",
    },
  },
  "oao-b": Object {
    "displayName": "oao-b",
    "name": "oao-b",
    "pkgPath": "test/fixtures/packages/oao-b",
    "specs": Object {
      "dependencies": Object {
        "oao": "*",
        "timm": "1.x",
      },
      "license": "MIT",
      "main": "index.js",
      "name": "oao-b",
      "scripts": Object {
        "start": "ls -al",
        "start2": "ls",
      },
      "version": "0.1.0",
    },
  },
  "oao-c": Object {
    "displayName": "oao-c",
    "name": "oao-c",
    "pkgPath": "test/fixtures/packages/oao-c",
    "specs": Object {
      "dependencies": Object {
        "oao": "*",
        "timm": "1.x",
      },
      "devDependencies": Object {
        "oao-b": "*",
        "xxl": "1.x",
      },
      "license": "MIT",
      "main": "index.js",
      "name": "oao-c",
      "peerDependencies": Object {
        "oao-b": "*",
      },
      "scripts": Object {
        "start": "ls -al",
      },
      "version": "0.1.0",
    },
  },
  "oao-d": Object {
    "displayName": "oao-d",
    "name": "oao-d",
    "pkgPath": "test/fixtures/packages/oao-d",
    "specs": Object {
      "dependencies": Object {
        "oao": "*",
        "timm": "1.x",
      },
      "devDependencies": Object {
        "oao-b": "*",
        "oao-c": "*",
        "xxl": "1.x",
      },
      "license": "MIT",
      "main": "index.js",
      "name": "oao-d",
      "peerDependencies": Object {},
      "scripts": Object {},
      "version": "0.1.0",
    },
  },
  "oao-priv": Object {
    "displayName": "oao-priv",
    "name": "oao-priv",
    "pkgPath": "test/fixtures/packages/oao-priv",
    "specs": Object {
      "dependencies": Object {
        "oao": "*",
        "timm": "1.x",
      },
      "devDependencies": Object {
        "oao-b": "*",
        "oao-c": "*",
        "xxl": "1.x",
      },
      "license": "MIT",
      "main": "index.js",
      "name": "oao-priv",
      "peerDependencies": Object {},
      "private": true,
      "version": "0.1.0",
    },
  },
}
`;

exports[`readAllSpecs supports excluding packages 1`] = `
Object {
  "oao": Object {
    "displayName": "oao",
    "name": "oao",
    "pkgPath": "test/fixtures/packages/oao",
    "specs": Object {
      "license": "MIT",
      "main": "index.js",
      "name": "oao",
      "version": "0.1.0",
    },
  },
  "oao-d": Object {
    "displayName": "oao-d",
    "name": "oao-d",
    "pkgPath": "test/fixtures/packages/oao-d",
    "specs": Object {
      "dependencies": Object {
        "oao": "*",
        "timm": "1.x",
      },
      "devDependencies": Object {
        "oao-b": "*",
        "oao-c": "*",
        "xxl": "1.x",
      },
      "license": "MIT",
      "main": "index.js",
      "name": "oao-d",
      "peerDependencies": Object {},
      "scripts": Object {},
      "version": "0.1.0",
    },
  },
  "oao-priv": Object {
    "displayName": "oao-priv",
    "name": "oao-priv",
    "pkgPath": "test/fixtures/packages/oao-priv",
    "specs": Object {
      "dependencies": Object {
        "oao": "*",
        "timm": "1.x",
      },
      "devDependencies": Object {
        "oao-b": "*",
        "oao-c": "*",
        "xxl": "1.x",
      },
      "license": "MIT",
      "main": "index.js",
      "name": "oao-priv",
      "peerDependencies": Object {},
      "private": true,
      "version": "0.1.0",
    },
  },
}
`;
